@@ -78,6 +78,8 @@
   *  - Changed LED board driver code to define dummy LED masks for the first four board LEDs, so that user code can be compiled for boards
   *    with less than four LEDs without code modifications (thanks to Morten Lund)
   *  - Changed HWB board driver to Buttons driver, to allow for the support of future boards with more than one mounted GPIO button
+  *  - Serial driver now correctly calculates the baud register value when in double speed mode
+  *  - Init function of the Serial driver is now static inline to product smaller code for the common-case of static init values
   *    
   *
   *  \section Sec_ChangeLog090401 Version 090401
